# openapi.json
@@ -255,81 +255,6 @@
 				}
 			}
 		},
-		"/events/de.ard.eventhub.v1.radio.text": {
-			"post": {
-				"tags": ["events"],
-				"summary": "Set a live encoder text for a track",
-				"operationId": "eventPostV1RadioText",
-				"security": [
-					{
-						"bearerAuth": []
-					}
-				],
-				"requestBody": {
-					"description": "\nNew event to be distributed to subscribers.\nThe Eventhub format validation expects only a subset of these variables as minimum set. All other fields are technically optional, but **highly encouraged** to be included, so a best-possible metadata exchange is possible.\nThe subset is defined in the list of required fields of Schemas `eventV1PostRadioTextBody`, resulting in this body:\n```json\n{\n  \"event\": \"de.ard.eventhub.v1.radio.text\",\n  \"start\": \"2020-01-19T06:00:00+01:00\",\n  \"validUntil\": \"2026-01-19T06:00:00+01:00\",\n  \"text\": \"Catchy one Liner\",\n  \"services\": [ { ... } ]\n }\n```\nRequired fields not specified in the Schema, will cause your request to fail.\n",
-					"content": {
-						"application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/eventV1PostRadioTextBody"
-							}
-						}
-					},
-					"required": true
-				},
-				"responses": {
-					"201": {
-						"description": "\nEvent created\n*Note:* The first request of an event for an externalId that is not registered yet, will return the status `failed: 1`. This indicates that a new topic for the externalId has been created, and the request needs to be repeated:\n```json\n\"statuses\": {\n  \"published\": 0,\n  \"blocked\": 0,\n  \"failed\": 1\n}\n```\nIf the request returns the status `blocked: 1`, it indicates that you are not allowed to publish events under the given publisherId.\n",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/eventV1PostRadioTextResBody"
-								}
-							}
-						}
-					},
-					"400": {
-						"description": "Bad Request (invalid input)",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/errorBadRequest"
-								}
-							}
-						}
-					},
-					"401": {
-						"description": "Missing authentication",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/errorUnauthorized"
-								}
-							}
-						}
-					},
-					"403": {
-						"description": "Invalid authorization",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/errorForbidden"
-								}
-							}
-						}
-					},
-					"500": {
-						"description": "Internal server error",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/errorInternalServerError"
-								}
-							}
-						}
-					}
-				}
-			}
-		},
 		"/events/de.ard.eventhub.v1.radio.track.playing": {
 			"post": {
 				"tags": ["events"],
@@ -1312,70 +1237,6 @@
 					}
 				}
 			},
-			"eventV1PostRadioTextBody": {
-				"type": "object",
-				"properties": {
-					"event": {
-						"description": "If set, it needs to match the URL event parameter",
-						"examples": ["de.ard.eventhub.v1.radio.text"],
-						"type": "string",
-						"enum": ["de.ard.eventhub.v1.radio.text"]
-					},
-					"start": {
-						"type": "string",
-						"description": "ISO8601 compliant timestamp",
-						"examples": ["2020-01-19T06:00:00+01:00"]
-					},
-					"validUntil": {
-						"type": "string",
-						"description": "ISO8601 compliant timestamp how long this text can be displayed (fallback to title - artist)",
-						"examples": ["2020-01-19T06:00:00+01:00"]
-					},
-					"text": {
-						"type": "string",
-						"description": "one line of Radiotext for live encoder (limited in length)",
-						"examples": ["Catchy one Liner"]
-					},
-					"services": {
-						"type": "array",
-						"items": {
-							"$ref": "#/definitions/services"
-						},
-						"description": "The playing stations unique Service-IDs. Do not include the Service-Type suffix."
-					}
-				},
-				"required": ["start", "validUntil", "text", "services"],
-				"additionalProperties": false,
-				"description": "**Please also note the details in the `POST /events/v1` endpoint above!**",
-				"definitions": {
-					"services": {
-						"type": "object",
-						"properties": {
-							"type": {
-								"examples": ["PermanentLivestream"],
-								"type": "string",
-								"enum": ["EventLivestream", "PermanentLivestream"]
-							},
-							"externalId": {
-								"type": "string",
-								"examples": ["crid://swr.de/123450"]
-							},
-							"publisherId": {
-								"type": "string",
-								"description": "External ID or globally unique identifier (Core ID) for the associated publisher. When no Core ID is provided, the External ID will be converted by Eventhub.",
-								"examples": ["248000"]
-							},
-							"id": {
-								"description": "Globally unique identifier, created by Eventhub",
-								"examples": ["urn:ard:permanent-livestream:49267f7d67be180d"],
-								"type": "string"
-							}
-						},
-						"required": ["type", "externalId", "publisherId"],
-						"additionalProperties": false
-					}
-				}
-			},
 			"eventV1ResBody": {
 				"type": "object",
 				"properties": {
@@ -1699,110 +1560,6 @@
 							}
 						},
 						"additionalProperties": {}
-					}
-				}
-			},
-			"eventV1PostRadioTextResBody": {
-				"type": "object",
-				"properties": {
-					"statuses": {
-						"type": "object",
-						"properties": {
-							"published": {
-								"type": "integer",
-								"minimum": -9007199254740991,
-								"maximum": 9007199254740991,
-								"examples": [1]
-							},
-							"blocked": {
-								"type": "integer",
-								"minimum": -9007199254740991,
-								"maximum": 9007199254740991,
-								"examples": [0]
-							},
-							"failed": {
-								"type": "integer",
-								"minimum": -9007199254740991,
-								"maximum": 9007199254740991,
-								"examples": [0]
-							}
-						},
-						"required": ["published", "blocked", "failed"],
-						"additionalProperties": false
-					},
-					"event": {
-						"$ref": "#/definitions/eventV1PostRadioTextBody"
-					},
-					"trace": {
-						"nullable": true,
-						"examples": [null],
-						"type": "string"
-					}
-				},
-				"required": ["statuses", "event", "trace"],
-				"additionalProperties": false,
-				"definitions": {
-					"eventV1PostRadioTextBody": {
-						"type": "object",
-						"properties": {
-							"event": {
-								"description": "If set, it needs to match the URL event parameter",
-								"examples": ["de.ard.eventhub.v1.radio.text"],
-								"type": "string",
-								"enum": ["de.ard.eventhub.v1.radio.text"]
-							},
-							"start": {
-								"type": "string",
-								"description": "ISO8601 compliant timestamp",
-								"examples": ["2020-01-19T06:00:00+01:00"]
-							},
-							"validUntil": {
-								"type": "string",
-								"description": "ISO8601 compliant timestamp how long this text can be displayed (fallback to title - artist)",
-								"examples": ["2020-01-19T06:00:00+01:00"]
-							},
-							"text": {
-								"type": "string",
-								"description": "one line of Radiotext for live encoder (limited in length)",
-								"examples": ["Catchy one Liner"]
-							},
-							"services": {
-								"type": "array",
-								"items": {
-									"$ref": "#/definitions/services"
-								},
-								"description": "The playing stations unique Service-IDs. Do not include the Service-Type suffix."
-							}
-						},
-						"required": ["start", "validUntil", "text", "services"],
-						"additionalProperties": false,
-						"description": "**Please also note the details in the `POST /events/v1` endpoint above!**"
-					},
-					"services": {
-						"type": "object",
-						"properties": {
-							"type": {
-								"examples": ["PermanentLivestream"],
-								"type": "string",
-								"enum": ["EventLivestream", "PermanentLivestream"]
-							},
-							"externalId": {
-								"type": "string",
-								"examples": ["crid://swr.de/123450"]
-							},
-							"publisherId": {
-								"type": "string",
-								"description": "External ID or globally unique identifier (Core ID) for the associated publisher. When no Core ID is provided, the External ID will be converted by Eventhub.",
-								"examples": ["248000"]
-							},
-							"id": {
-								"description": "Globally unique identifier, created by Eventhub",
-								"examples": ["urn:ard:permanent-livestream:49267f7d67be180d"],
-								"type": "string"
-							}
-						},
-						"required": ["type", "externalId", "publisherId"],
-						"additionalProperties": false
 					}
 				}
 			},
